<resources>
    <string name="app_name">PulperiaApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID</string>
    <string name="producto">PRODUCTO</string>
    <string name="precio">PRECIO</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar inventario</string>
    <string name="editarTabla">Editar producto</string>
    <string name="ingrese_un_id">Ingrese un id</string>
    <string name="ingrese_un_precio">Ingrese un precio</string>
    <string name="agregarprix">agregarPrix</string>
    <string name="agregar">Agregar</string>
    <string name="creditos">Creditos</string>
    <string name="inventario">Inventario</string>
    <string name="ventas">Ventas</string>
    <string name="home">Home</string>
    <string name="estado">Estado -> </string>
    <string name="cliente">Cliente -> </string>
    <string name="nombre_del_cliente">Nombre del Cliente</string>
    <string name="total_400_0">Total:</string>
    <string name="prix_cola_2l_2">Prix cola 2l - 2</string>
    <string name="lista_credito">Lista credito</string>
    <string name="logo">logo</string>
    <string name="ingrese_un_usuario">Ingrese un usuario</string>
    <string name="ingrese_su_contrase_a">Ingrese una contraseña</string>
    <string name="iniciar_ses_on">Iniciar Sesíon</string>
    <string name="olvidastes_la_contrase_a">¿Olvidastes la contraseña?</string>
    <string name="moroso">moroso</string>
    <string name="ingrese_un_producto">Ingrese un producto</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="ingrese_un_nombre">Ingrese un nombre</string>
    <string name="registrar">Registrar</string>
    <string name="ingrese_un_nombre_de_inventario">Nombre producto</string>
    <string name="ingrese_el_total_a_pagar">Ingrese el total a pagar</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="guardar">Guardar</string>
    <string name="prix_cola">Prix cola</string>
    <string name="coca_cola">Coca cola</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="total">Total</string>
    <string name="_0_00">0.00</string>
    <string name="guardar_venta">Guardar venta</string>
    <string name="junaxerdev">App desarrollada por JunaxerDev</string>
    <string name="ingresa_tus_credenciales">Ingrese sus credenciales</string>
    <string name="logojunior">logoJunior</string>
    <string name="enviar">Enviar</string>
    <string name="ingrese_el_numero_del_desarrollador">Ingrese el numero del desarrollador</string>
    <string name="seleccione_un_producto">Seleccione un producto</string>
    <string name="venta_por_cajilla">Venta por cajilla</string>
    <string name="big_cola">Big cola</string>
    <string name="agregar_foto">Agregar foto</string>

    <string name="precio_total_0_00">Precio Total: C$0</string>
    <string name="cajilla">CAJILLA</string>
    <string name="tama_o">TAMAÑO</string>
    <string name="agregar_a_la_tabla">Agregar datos</string>
    <string name="precio_unitario_por_cajilla">Precio Unitario por Cajilla</string>
    <string name="cantidad_de_cajillas">Cantidad de Cajillas</string>
    <string name="cantidad_por_cajilla">Cantidad por Cajilla</string>
    <string name="tama_o_del_envase_ejemplo_1l">Tamaño del Envase (ejemplo: 1L)</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="editar_venta">Editar venta</string>
    <string name="fecha">FECHA</string>
    <string name="editar_inventario">Editar tabla</string>
    <string name="ventas_individuales">Ventas individuales</string>
    <string name="ventas_por_cajilla">Ventas por cajilla</string>
    <string name="buscar">Buscar</string>
    <string name="clientes_que_ya_han_realizado_el_pago">Clientes que ya han realizado el pago</string>
    <string name="filtrar_ventas_por_fechas">Filtrar ventas por fechas</string>
    <string name="mostrar_clientes_registrados">Mostrar clientes registrados</string>
    <string name="ventas_por_individual">Ventas por individual</string>
    <string name="aplicar_filtros">Aplicar Filtros</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="inventario1">Inventario!</string>
    <string name="_2023_12_12">2023-12-12</string>
    <string name="_30">30</string>
    <string name="_20_05_21">20-05-21</string>
    <string name="requisitos_de_contraseña">Requisitos de Contraseña:\n\n1. Al menos 8 caracteres de longitud.\n2. Al menos una letra mayúscula.\n3. Al menos un número.\n4. Puede contener caracteres especiales como @, #, $, %.</string>
    <string name="_505_89972365">+505 89972365</string>
    <string name="se_ha_enviado_un_codigo_de_verificacion_al_numero">Se ha enviado un codigo de verificacion al numero:</string>
    <string name="otp_verificacion">OTP VERIFICACION</string>
    <string name="resend_code">Enviar codigo </string>
    <string name="verificar_otp">Verificar OTP</string>
    <string name="otro_metodo">Otro metodo</string>
    <string name="huella_digital">Huella digital</string>
    <string name="filtrar_ganacias">Filtrar ganacias</string>
    <string name="_0_2">0/2</string>

</resources>