<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/removeItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0.5dp">

    <TextView
        android:id="@+id/tvProductoVenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:text="@string/producto"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCantidadVenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:text="@string/cantidad"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPrecioVenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:text="@string/precio"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />
</TableRow>