<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".ui.view.coca.TablaCocaFragment">

    <LinearLayout
        android:id="@+id/LinearProductoCoca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SearchView
            android:id="@+id/svTablaProductoCoca"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAgregarProductoCoca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/boton"
            android:contentDescription="@string/agregarprix"
            android:src="@drawable/baseline_add_24"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/svTablaCoca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">


        <TableLayout
            android:id="@+id/tbCoca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/trCoca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                tools:ignore="UselessParent">


                <TextView
                    android:id="@+id/tvIdCoca"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/header_shape"
                    android:gravity="center"
                    android:text="@string/id"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvProductoCoca"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/header_shape"
                    android:gravity="center"
                    android:text="@string/producto"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPrecioCoca"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/header_shape"
                    android:gravity="center"
                    android:text="@string/precio"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>
        </TableLayout>


    </ScrollView>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvIdEditarCoca"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_un_id"
            android:inputType="number">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvPrecioEditarCoca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_un_precio"
            android:inputType="numberDecimal">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditarProductoCoca"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/boton"
            android:text="@string/editar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnElimimarProductoCoca"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/boton"
            android:text="@string/eliminar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:targetApi="lollipop" />
    </LinearLayout>

</LinearLayout>