<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.view.venta.view.EditarVentasFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarVentas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fondo"
        app:title="Editar ventas"
        app:titleTextColor="@color/white" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chListaEditar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chPrixEditar"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="Prixcola"
                        android:text="@string/prix_cola"
                        android:textSize="20sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chBigColaEditar"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="BigCola"
                        android:text="@string/big_cola"
                        android:textSize="20sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chCocaEditar"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:tag="Coca"
                        android:text="@string/coca_cola"
                        android:textSize="20sp" />
                </com.google.android.material.chip.ChipGroup>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">


                <LinearLayout
                    android:id="@+id/seleccionPro"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@color/fondo"
                        android:gravity="center_horizontal"
                        android:text="@string/seleccione_un_producto"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spProductosEditar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/btnEditarProducto"
                        style="@style/Widget.Material3.MaterialTimePicker.Button"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp"
                        android:backgroundTint="@color/fondo"
                        android:text="@string/agregar"
                        android:textColor="@color/white"
                        android:textSize="20sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/swVentaPorCajillaEditar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/venta_por_cajilla"
                        android:textSize="15sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputPrecio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        app:counterEnabled="true"
                        app:counterMaxLength="5"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@drawable/baseline_error_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tvPrecioPersonalizado"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/ingrese_un_precio"
                            android:inputType="numberDecimal"
                            android:maxLength="5" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnRestablecer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="10dp"
                    android:text="Restablecer precio" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">


                    <TableRow
                        android:id="@+id/trProductoEditar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvProductName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/header_shape"
                            android:gravity="center"
                            android:text="@string/producto"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvQuantity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/header_shape"
                            android:gravity="center"
                            android:text="@string/cantidad"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <!-- Total -->
                        <TextView
                            android:id="@+id/tvTotal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/header_shape"
                            android:gravity="center"
                            android:text="@string/precio"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <TableLayout
                            android:id="@+id/tlProductoEditar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:stretchColumns="*">

                        </TableLayout>
                    </androidx.core.widget.NestedScrollView>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <TextView
                            android:id="@+id/tvTotalLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@string/total"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvTotalAmountEditar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/_0_00"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </TableRow>

                </LinearLayout>


                <Button
                    android:id="@+id/btnEditarVenta"
                    style="@style/Widget.Material3.MaterialTimePicker.Button"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/fondo"
                    android:text="@string/editar_venta"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>